# Low

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/Shaders/: basic.frag  basic.vert
Low/: CMakeLists.txt
Low/src/: Lowpch.cpp  Lowpch.h  Renderer.cpp  Renderer.h
Low/src/Core/: Core.h  Debug.cpp  Debug.h  Instrumentor.h  State.cpp  State.h  UUID.cpp  UUID.h
Low/src/Hardware/: Memory.cpp  Memory.h  Support.cpp  Support.h
Low/src/Resources/: Camera.cpp  Camera.h  Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Low/src/Structures/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
Low/src/Synchronization/: Synchronization.cpp  Synchronization.h
Low/src/Utils/Rendering/: UniformTypes.h
Low/src/Vulkan/: GraphicsPipeline.cpp  GraphicsPipeline.h  Queue.cpp  Queue.h  RenderPass.cpp  RenderPass.h  Swapchain.cpp  Swapchain.h  VulkanCore.cpp  VulkanCore.h
Low/src/Vulkan/Command/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  ImmediateCommands.cpp  ImmediateCommands.h  OneTimeCommands.cpp  OneTimeCommands.h
Low/src/Vulkan/Descriptor/: DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h
Low/src/Vulkan/Material/: VulkanMaterial.cpp  VulkanMaterial.h  VulkanMaterialInstance.cpp  VulkanMaterialInstance.h
Lower/: CMakeLists.txt
Lower/src/: Main.cpp
Lower/src/Core/: Application.cpp  Application.h  Layer.h
Lower/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Lower/src/Rendering/: RenderingLayer.cpp  RenderingLayer.h
scripts/: Win-GenMSVC22.bat
